# rainbow

./: Cargo.toml  README.md
book/src/: 01-welcome.md  SUMMARY.md
crates/fyr/: Cargo.toml
crates/fyr/src/: ast.rs  eval.rs  format.rs  lexer.rs  lib.rs  main.rs  parser.rs  repl.rs  typecheck.rs
crates/rainbow/: Cargo.toml
crates/rainbow/src/: ast.rs  diagnostic.rs  eval.rs  format.rs  lexer.rs  lib.rs  main.rs  parser.rs  repl.rs  span.rs  typecheck.rs
docs/: DESIGN.md  LANGUAGE_SYNTHESIS.md  RAINBOW_NORTH_STAR.md
examples/: arrays.fyr  arrays.rain  assertions.fyr  assertions.rain  control.fyr  control.rain  control_assertions.fyr  control_assertions.rain  enums.fyr  enums.rain  fib.fyr  fib.rain  floats.rain  flow.rain  hello.fyr  nil.fyr  pipeline.fyr  point.fyr  point.rain  range.fyr  range.rain  strings.fyr  sum.fyr  sum.rain
examples/project/: rainbow.toml
examples/project/src/: lib.rain  main.fyr  main.rain
examples/project/tests/: main.fyr  main.rain
