[package]
name = "rainbow"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "The Rainbow programming language bootstrap toolchain."

[lib]
name = "rainbow"
path = "src/lib.rs"

[[bin]]
name = "rainbow"
path = "src/main.rs"
